vpc.tf
resource "aws_vpc" "ieee_vpc" {
  cidr_block = "10.0.0.0/16"

  tags = {
    Name = "ieee-prod-vpc"
  }
}
